tests/byteserde_derive/error_scenarios/panic_enum.stderr
error: proc-macro derive panicked
 --> tests/byteserde_derive/error_scenarios/panic_enum.rs:3:10
  |
3 | #[derive(ByteSerializeStack)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = help: message: Only struct types supported, found 'NotSupportedEnum' of type 'enum'
